	* m4/ss7.m4: rearrange and update headers
	* m4/strcomp.m4: rearrange and update headers
	* m4/strconf.m4: rearrange and update headers
	* m4/streams.m4: rearrange and update headers
	* m4/voip.m4: rearrange and update headers
	* m4/xns.m4: rearrange and update headers
	* m4/xopen.m4: rearrange and update headers
	* m4/xti.m4: rearrange and update headers

2007-08-03  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: reference updates
	* doc/manual/openss7.texi: doc update

2007-07-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: release notes update

	* scripts/texi/compat.texi: noted problem with XEN kernels
	* doc/manual/bugs.texi: noted problem with XEN kernels
	* iperf/doc/manual/compat.texi: noted problem with XEN kernels

2007-06-29  Brian Bidulock  <bidulock@openss7.org>

	* .gitignore: more files to ignore

2007-06-27  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/bugs.texi: document lib32gcc1 problem on ubuntu
	* am/info.am: force portrait mode for ps, eps and pdf

2007-06-25  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/versions.texi: bumped release numbers
	* .pkgrelease: bumped release numbers
	* acinclude.m4: bumped release numbers
	* debian/changelog: bumped release numbers
	* doc/manual/news.texi: bumped release numbers

2007-06-24  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: update revision numbers for warnings
	* openss7.spec.in: recognize EL4 and EL5 for kernel-develop

2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: fix up cflagcheck for openSUSE 10.2
	* doc/manual/news.texi: updates fore release
	* m4/dist.m4: handle openSUSE codename
	* scripts/texi/compat.texi: spelling s/Edge/Etch/

2007-06-22  Brian Bidulock  <bidulock@openss7.org>

	* am/openss7.am: add uninstall-am to remove target
	- wrong subdirs in MY_REVERSIVE_TARGETS
	- skip unfriendly subdirectories on reversive targets

2007-06-21  Brian Bidulock  <bidulock@openss7.org>
